# arc2020-take2

./: Cargo.toml  build.sh  default.nix  runner.py  shell.nix
data/: debug_submission.csv
src/: main.rs
src/arc2020/: algorithm.rs  io.rs  mod.rs  operations.rs  types.rs
src/arc2020/solver/: greedy.rs  mod.rs  operations_solver.rs  score.rs  stub.rs  types.rs
src/arc2020/solver/operation/: geometry.rs  mod.rs  noop.rs  types.rs
src/arc2020/test/: mod.rs  test_algorithm.rs  test_operations.rs
