[package]
name = "arc2020-take2"
version = "0.1.0"
authors = ["Nikolay Amiantov <ab@fmap.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "^0.9.0"
serde = { version = "^1.0.106", features = ["derive"] }
serde_json = "^1.0"
anyhow = "^1.0.31"
ndarray = "^0.13.0"
libmath = "^0.1.4"
